--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,32 +8,83 @@
     .mymargin{
         margin: 15px;
     }
+    .logos{
+        margin-top: 100px;
+        margin-bottom: 100px;
+        margin-right: 15px;
+        margin-left: 30px;
+    }
+    .grad{
+        background-image: linear-gradient(to bottom right, #FFF500, #FDBA10);
+    }
+    .cover{
+        height: 100vh;
+    }
+    .mycol{
+        margin-left: 50px;
+        margin-bottom: 5px;
+        background-color: #AF2C2A;
+    }
+    .big{
+        font-size: 500%;
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-top: 30px;
+        margin-left: 30px;
+    }
+    .small{
+        font-size: 250%;
+        margin-top: 20px;
+        margin-left: 50px;
+    }
+    .about{
+        margin-left: 50px;      
+    }
+    .mav{
+        width: 90%;
+        height: 90%;
+    }
     </style>
 </head>
 <body>
-
-<div class="container">
-    <div class="row">
-        <div class="col-md">
-            <img src="{{url_for('static', filename='logogg.png')}}" class="img-fluid" alt="Image not found">
+<div class="row">
+    <div class="col-3 cover">
+        <div class="row logos">
+        <img src="{{url_for('static', filename='neww.png')}}" class="img-fluid" alt="Image not found">
         </div>
-        <div class="col-md">
-            <img src="{{url_for('static', filename='L1Maverick.jpg')}}" class="img-fluid" alt="Image not found">
+        <div class="row logos">
+        <img src="{{url_for('static', filename='L1Maverick.jpg')}}" class="img-fluid mav" alt="Image not found">
         </div>
-    <div>
-    <div class="row">
-        <div class="col-md">
+    </div>
+    <div class="col-9 grad cover">
+        <div class="row ">
+            <div class="shadow p-3 mb-5 rounded">
+                <h1 class="big">
+                Stock Balancing Solver
+                </h1>
+            </div>
+        </div>
+        <div class="row">
             <form action="{{ url_for('main') }}">
-                <button type="submit" class="btn btn-primary" value="submit">path wise</button>
+                <button type="submit" class="btn btn-danger mycol" value="submit">Path Wise</button>
             </form>
         </div>
-        <div class="col-md">
+        <div class="row">
             <form action="{{ url_for('productwise') }}">
-                <button type="submit" class="btn btn-primary" value="submit">product wise</button>
+                <button type="submit" class="btn btn-danger mycol" value="submit">Product Wise</button>
             </form>
         </div>
-    <div> 
-</div>
+        <div>
+        <div class="row">
+            <h1 class="small">
+                About
+            </h1>
+            <div class="about">
+                Welcome to the Stock Balancing Solver website made specially for the ABinBev's Maverick 2.0 Hackathon.
+            </div>
+        <div> 
+    </div>
+<div>
 
 </body>
 </html>
