--- a/templates/prodresult.html
+++ b/templates/prodresult.html
@@ -11,19 +11,69 @@
     .shrink{
         height: 1px;
     }
+    .logos{
+        margin-top: 100px;
+        margin-bottom: 100px;
+        margin-right: 15px;
+        margin-left: 30px;
+    }
+    .grad{
+        background-image: linear-gradient(to bottom right, #FFF500, #FDBA10);
+    }
+    .cover{
+        height: 100vh;
+    }
+    .mycol{
+        margin-left: 50px;
+        margin-bottom: 5px;
+        margin-top: 7px;
+        background-color: #AF2C2A;
+        float: left;
+    }
+    .big{
+        font-size: 500%;
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-top: 30px;
+        margin-left: 30px;
+    }
+    .small{
+        font-size: 250%;
+        margin-top: 20px;
+        margin-left: 50px;
+    }
+    .about{
+        margin-left: 50px;      
+    }
+    .mav{
+        width: 90%;
+        height: 90%;
+    }
+    .selectt{
+        width:80%;
+    }
+
     </style>
 </head>
 <body>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md">
-            <img src="{{url_for('static', filename='logogg.png')}}" class="img-fluid" alt="Image not found">
+<div class="row">
+    <div class="col-3 cover">
+        <div class="row logos">
+            <img src="{{url_for('static', filename='neww.png')}}" class="img-fluid" alt="Image not found">
         </div>
-        <div class="col-md">
-            <img src="{{url_for('static', filename='L1Maverick.jpg')}}" class="images img-fluid" alt="Image not found">
+        <div class="row logos">
+            <img src="{{url_for('static', filename='L1Maverick.jpg')}}" class="img-fluid" alt="Image not found">
         </div>
-    <div>
+    </div>
+    <div class="col-9 grad cover">
+        <div class="row ">
+            <div class="shadow p-3 mb-5 rounded">
+                <h1 class="big">
+                Stock Balancing Solver
+                </h1>
+            </div>
+        </div>
         <div class="mymargin">
             <fieldset disabled>
                 <div class="row">
@@ -35,6 +85,7 @@
                 </div>
             </fieldset>
         </div>
+        <div>
             <table class="table">
             <thead>
                 <tr>
@@ -55,12 +106,17 @@
                 {% endfor %}
             </tbody>
             </table>
-        <form class="mymargin" action="{{ url_for('productwise') }}">
-            <button type="submit" class="btn btn-primary" value="submit">Try again</button>
+        </div>
+        <form action="{{ url_for('productwise') }}">
+            <button type="submit" class="btn btn-danger mycol" value="submit">Try again</button>
         </form>
         <form class="mymargin" action="{{ url_for('home') }}">
-            <button type="submit" class="btn btn-primary" value="submit">Home</button>
+            <button type="submit" class="btn btn-danger mycol" value="submit">Home</button>
         </form>
+        <form class="mymargin" method="POST">
+            <button type="submit" class="btn btn-danger mycol" name="val" value="{{val1}}">Download</button>
+        </form>
+    </div>
 </div>
 
 </body>
