--- a/templates/result.html
+++ b/templates/result.html
@@ -11,24 +11,73 @@
     .shrink{
         height: 1px;
     }
+    .logos{
+        margin-top: 100px;
+        margin-bottom: 100px;
+        margin-right: 15px;
+        margin-left: 30px;
+    }
+    .grad{
+        background-image: linear-gradient(to bottom right, #FFF500, #FDBA10);
+    }
+    .cover{
+        height: 100vh;
+    }
+    .mycol{
+        margin-left: 50px;
+        margin-bottom: 5px;
+        margin-top: 7px;
+        background-color: #AF2C2A;
+        float: left;
+    }
+    .big{
+        font-size: 500%;
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-top: 30px;
+        margin-left: 30px;
+    }
+    .small{
+        font-size: 250%;
+        margin-top: 20px;
+        margin-left: 50px;
+    }
+    .about{
+        margin-left: 50px;      
+    }
+    .mav{
+        width: 90%;
+        height: 90%;
+    }
+    .selectt{
+        width:80%;
+    }
     </style>
 </head>
 <body>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md">
-            <img src="{{url_for('static', filename='logogg.png')}}" class="img-fluid" alt="Image not found">
+<div class="row">
+    <div class="col-3 cover">
+        <div class="row logos">
+            <img src="{{url_for('static', filename='neww.png')}}" class="img-fluid" alt="Image not found">
         </div>
-        <div class="col-md">
-            <img src="{{url_for('static', filename='L1Maverick.jpg')}}" class="images img-fluid" alt="Image not found">
+        <div class="row logos">
+            <img src="{{url_for('static', filename='L1Maverick.jpg')}}" class="img-fluid" alt="Image not found">
         </div>
-    <div>
+    </div>
+    <div class="col-9 grad cover">
+        <div class="row ">
+            <div class="shadow p-3 mb-5 rounded">
+                <h1 class="big">
+                Stock Balancing Solver
+                </h1>
+            </div>
+        </div>
         <div class="mymargin">
             <fieldset disabled>
                 <div class="row">
                     <div class="col-md">
-                    <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" name="answer_dis">
+                    <select class="form-select form-select-lg mb-3 selectt" aria-label=".form-select-lg example" name="answer_dis">
                     <option selected>{{val1}}</option>
                     </select>
                     </div>
@@ -37,40 +86,47 @@
             <fieldset disabled>
                 <div class="row">
                     <div class="col-md">
-                    <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" name="answer_dis">
+                    <select class="form-select form-select-lg mb-3 selectt" aria-label=".form-select-lg example" name="answer_dis">
                     <option selected>{{val2}}</option>
                     </select>
                     </div>
                 </div>
             </fieldset>
         </div>
+        <div>
             <table class="table">
-            <thead>
-                <tr>
-                <th scope="col">#</th>
-                <th scope="col">Product ID</th>
-                <th scope="col">Amount (Hl)</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for a,b in result%}
-                    {% if b!=0 %}
-                        <tr>
-                        <th scope="row">1</th>
-                        <td>{{a}}</td>
-                        <td>{{b}}</td>
-                        </tr>
-                    {% endif %}
-                {% endfor %}
-            </tbody>
+                <thead>
+                    <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Product ID</th>
+                    <th scope="col">Amount (Hl)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for a,b in result%}
+                        {% if b!=0 %}
+                            <tr>
+                            <th scope="row">1</th>
+                            <td>{{a}}</td>
+                            <td>{{b}}</td>
+                            </tr>
+                        {% endif %}
+                    {% endfor %}
+                </tbody>
             </table>
+        </div>
         <form action="{{ url_for('main') }}">
-            <button type="submit" class="btn btn-primary" value="submit">Try again</button>
+            <button type="submit" class="btn btn-danger mycol" value="submit">Try again</button>
         </form>
         <form class="mymargin" action="{{ url_for('home') }}">
-            <button type="submit" class="btn btn-primary" value="submit">Home</button>
+            <button type="submit" class="btn btn-danger mycol" value="submit">Home</button>
         </form>
+        <form class="mymargin" method="POST">
+            <button type="submit" class="btn btn-danger mycol" name="val" value="{{joinval}}">Download</button>
+        </form>
+    </div>
 </div>
+
 
 </body>
 </html>
