--- a/templates/result.html
+++ b/templates/result.html
@@ -21,11 +21,12 @@
         background-image: linear-gradient(to bottom right, #FFF500, #FDBA10);
     }
     .cover{
-        height: 100vh;
+        
     }
     .mycol{
         margin-left: 50px;
         margin-bottom: 5px;
+        padding-bottom: 5px;
         margin-top: 7px;
         background-color: #AF2C2A;
         float: left;
@@ -69,7 +70,7 @@
         <div class="row ">
             <div class="shadow p-3 mb-5 rounded">
                 <h1 class="big">
-                Stock Balancing Solver
+                Stock Balancing
                 </h1>
             </div>
         </div>
@@ -98,15 +99,15 @@
                 <thead>
                     <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Product ID</th>
-                    <th scope="col">Amount (Hl)</th>
+                    <th scope="col">Product SKU</th>
+                    <th scope="col">Amount (hL)</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for a,b in result%}
                         {% if b!=0 %}
                             <tr>
-                            <th scope="row">1</th>
+                            <th scope="row">{{loop.index}}</th>
                             <td>{{a}}</td>
                             <td>{{b}}</td>
                             </tr>
@@ -116,13 +117,13 @@
             </table>
         </div>
         <form action="{{ url_for('main') }}">
-            <button type="submit" class="btn btn-danger mycol" value="submit">Try again</button>
+            <button type="submit" class="btn btn-danger mycol" value="submit">Try Different Pair</button>
+        </form>
+        <form class="mymargin" method="POST">
+            <button type="submit" class="btn btn-danger mycol" name="val" value="{{joinval}}">Download CSV</button>
         </form>
         <form class="mymargin" action="{{ url_for('home') }}">
             <button type="submit" class="btn btn-danger mycol" value="submit">Home</button>
-        </form>
-        <form class="mymargin" method="POST">
-            <button type="submit" class="btn btn-danger mycol" name="val" value="{{joinval}}">Download</button>
         </form>
     </div>
 </div>
