--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -60,7 +60,7 @@
         <div class="row ">
             <div class="shadow p-3 mb-5 rounded">
                 <h1 class="big">
-                Stock Balancing Solver
+                Stock Balancing
                 </h1>
             </div>
         </div>
