--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
         <div class="row ">
             <div class="shadow p-3 mb-5 rounded">
                 <h1 class="big">
-                Stock Balancing Solver
+                Stock Balancing
                 </h1>
             </div>
         </div>
@@ -72,7 +72,7 @@
                     <div class="row">
                         <div class="col-md">
                         <select class="form-select form-select-lg mb-3 selectt" aria-label=".form-select-lg example" name="answer">
-                        <option selected>Open this select menu</option>
+                        <option selected>Select Brewery</option>
                         {% for i in opns %}
                             <option value="{{i}}">{{i}}</option>
                         {% endfor %}
