--- a/templates/secondarg.html
+++ b/templates/secondarg.html
@@ -64,7 +64,7 @@
         <div class="row ">
             <div class="shadow p-3 mb-5 rounded">
                 <h1 class="big">
-                Stock Balancing Solver
+                Stock Balancing
                 </h1>
             </div>
         </div>
@@ -82,7 +82,7 @@
                     <div class="row">
                         <div class="col-md">
                         <select class="form-select form-select-lg mb-3 selectt" aria-label=".form-select-lg example" name="answer2">
-                        <option selected>Open this select menu</option>
+                        <option selected>Select Depot/Distributor</option>
                         {% for i in opns %}
                             <option value="{{i}}">{{i}}</option>
                         {% endfor %}
