--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -18,11 +18,10 @@
         background-image: linear-gradient(to bottom right, #FFF500, #FDBA10);
     }
     .cover{
-        height: 100vh;
     }
     .mycol{
         margin-left: 50px;
-        margin-bottom: 5px;
+        margin-bottom: 15px;
         background-color: #AF2C2A;
     }
     .big{
@@ -34,11 +33,13 @@
     }
     .small{
         font-size: 250%;
-        margin-top: 20px;
+        margin-top: 10px;
         margin-left: 50px;
     }
     .about{
-        margin-left: 50px;      
+        padding-top: -10px;
+        margin-left: 50px;
+        margin-right: 50px;      
     }
     .mav{
         width: 90%;
@@ -80,14 +81,43 @@
             </form>
         </div>
         <div>
-        <div class="row">
-            <h1 class="small">
-                About
-            </h1>
-            <div class="about">
-                Welcome to the Stock Balancing Solver website made specially for the ABinBev's Maverick 2.0 Hackathon.
+        <div class="row ">
+            <div class="container">
+                <div class="shadow-lg p-3 mb-5 rounded">
+                    <h1 class="small">
+                        About
+                    </h1>
+                    <div class="about ">
+                        Welcome to the Stock Balancing website made specially for the ABinBev's Maverick 2.0 Hackathon.
+                        Here is a quick guide on how to use the website. Currently, you are on the homepage. You can see the three
+                        options below the heading namely Grid wise, Path wise and Product wise.
+                        <div class="col"
+                        <br>
+                        <br>
+                        <b> Grid Wise - </b>
+                        <br>
+                        With the Grid Wise specification, you can choose a particular grid, that is a particular pair of product and
+                        brewery, you can get the required datafields like Amount to be transferred, Initial CS/ROP ratio and final CS/ROP ratio.
+                        <br>
+                        <br>
+                        <b> Path Wise - </b>
+                        <br>
+                        With the Path Wise specification, you can choose a particular starting location and a destination for the transfer of products. This will
+                        give you the Product SKU and the amount of it to be transferred.
+                        <br>
+                        <br>
+                        <b> Product Wise - </b>
+                        <br>
+                        With the Product Wise specification, you can choose a particular Product SKU, this will give you all the
+                        paths for the product that needs to be transferred and the amount associated with it.
+                        <br>
+                        <br>
+                        <i>This website was created by <b>Yash Kulkarni</b>, <b>Sudhanshu Chauhan</b> and <b>Sushrutha Sundaram</b> from the team <b>The Craftsmen</b> for the 
+                        ABinBev's Maverick 2.0 Hackathon.</i>
+                    </div>
+                </div>
             </div>
-        <div> 
+        <div>
     </div>
 <div>
 
