Download button added

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -80,6 +80,11 @@
                 <button type="submit" class="btn btn-danger mycol" value="submit">Product Wise</button>
             </form>
         </div>
+        <div class="row">
+            <form action="{{ url_for('download') }}">
+                <button type="submit" class="btn btn-danger mycol" value="submit">Download Output</button>
+            </form>
+        </div>
         <div>
         <div class="row ">
             <div class="container">
