--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,8 +9,8 @@
         margin: 15px;
     }
     .logos{
-        margin-top: 100px;
-        margin-bottom: 100px;
+        margin-top: 40px;
+        margin-bottom: 50px;
         margin-right: 15px;
         margin-left: 30px;
     }
@@ -42,22 +42,29 @@
         margin-right: 50px;      
     }
     .mav{
-        width: 90%;
-        height: 90%;
+
+    }
+    .abinb{
+        height: 120%;
+        width: 120%;
+        margin-left: 20px;
     }
     </style>
 </head>
 <body>
 <div class="row">
-    <div class="col-3 cover">
+    <div class="col-2 cover bgmine">
         <div class="row logos">
-        <img src="{{url_for('static', filename='neww.png')}}" class="img-fluid" alt="Image not found">
+        <img src="{{url_for('static', filename='neww.png')}}" class="img-fluid abinb" alt="Image not found">
         </div>
         <div class="row logos">
         <img src="{{url_for('static', filename='L1Maverick.jpg')}}" class="img-fluid mav" alt="Image not found">
         </div>
+        <div class="row logos">
+        <img src="{{url_for('static', filename='bott4.png')}}" class="img-fluid mav" alt="Image not found">
+        </div>     
     </div>
-    <div class="col-9 grad cover">
+    <div class="col-10 grad cover">
         <div class="row ">
             <div class="shadow p-3 mb-5 rounded">
                 <h1 class="big">
