--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -15,7 +15,7 @@
         margin-left: 30px;
     }
     .grad{
-        background-image: linear-gradient(to bottom right, #FFF500, #FDBA10);
+        background-image: linear-gradient(#faf200, rgb(255,255,255));
     }
     .cover{
     }
