--- a/templates/gridresult.html
+++ b/templates/gridresult.html
@@ -73,10 +73,10 @@
 <div class="row">
     <div class="col-2 cover">
         <div class="row logos">
-            <img src="{{url_for('static', filename='neww.png')}}" class="img-fluid" alt="Image not found">
+            <img src="{{url_for('static', filename='neww.png')}}" class="img-fluid abinb" alt="Image not found">
         </div>
         <div class="row logos">
-            <img src="{{url_for('static', filename='L1Maverick.jpg')}}" class="img-fluid" alt="Image not found">
+            <img src="{{url_for('static', filename='L1Maverick.jpg')}}" class="img-fluid mav" alt="Image not found">
         </div>
         <div class="row logos">
         <img src="{{url_for('static', filename='bott4.png')}}" class="img-fluid mav" alt="Image not found">
