--- a/templates/prodresult.html
+++ b/templates/prodresult.html
@@ -5,30 +5,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <style>
-    .mymargin{
-        margin: 15px;
-    }
     .shrink{
         height: 1px;
     }
+    .mymargin{
+        margin: 15px;
+    }
     .logos{
-        margin-top: 100px;
-        margin-bottom: 100px;
+        margin-top: 40px;
+        margin-bottom: 50px;
         margin-right: 15px;
         margin-left: 30px;
     }
     .grad{
-        background-image: linear-gradient(to bottom right, #FFF500, #FDBA10);
+        background-image: linear-gradient(#faf200, rgb(255,255,255));
     }
     .cover{
-        
     }
     .mycol{
         margin-left: 50px;
-        margin-bottom: 5px;
-        margin-top: 7px;
+        margin-bottom: 15px;
         background-color: #AF2C2A;
-        float: left;
     }
     .big{
         font-size: 500%;
@@ -39,18 +36,23 @@
     }
     .small{
         font-size: 250%;
-        margin-top: 20px;
+        margin-top: 10px;
         margin-left: 50px;
     }
     .about{
-        margin-left: 50px;      
-    }
-    .mav{
-        width: 90%;
-        height: 90%;
+        padding-top: -10px;
+        margin-left: 50px;
+        margin-right: 50px;     
     }
     .selectt{
         width:80%;
+    }
+    .mav{
+    }
+    .abinb{
+        height: 120%;
+        width: 120%;
+        margin-left: 20px;
     }
 
     </style>
@@ -58,15 +60,18 @@
 <body>
 
 <div class="row">
-    <div class="col-3 cover">
+    <div class="col-2 cover">
         <div class="row logos">
-            <img src="{{url_for('static', filename='neww.png')}}" class="img-fluid" alt="Image not found">
+            <img src="{{url_for('static', filename='neww.png')}}" class="img-fluid abinb" alt="Image not found">
         </div>
         <div class="row logos">
-            <img src="{{url_for('static', filename='L1Maverick.jpg')}}" class="img-fluid" alt="Image not found">
+            <img src="{{url_for('static', filename='L1Maverick.jpg')}}" class="img-fluid mav" alt="Image not found">
         </div>
+        <div class="row logos">
+        <img src="{{url_for('static', filename='bott4.png')}}" class="img-fluid mav" alt="Image not found">
+        </div>   
     </div>
-    <div class="col-9 grad cover">
+    <div class="col-10 grad cover">
         <div class="row ">
             <div class="shadow p-3 mb-5 rounded">
                 <h1 class="big">
