--- a/templates/gridlist1.html
+++ b/templates/gridlist1.html
@@ -25,7 +25,6 @@
     .cover{
     }
     .mycol{
-        margin-left: 50px;
         margin-bottom: 15px;
         background-color: #AF2C2A;
     }
@@ -79,6 +78,11 @@
                 STOCK BALANCING
                 </h1>
             </div>
+        </div>
+        <div class="row ">
+                <h1 style="margin-left:15px;">
+                Gridwise
+                </h1>
         </div>
         <div class="row">
             <form class="mymargin" method="POST">
