--- a/templates/gridlist2.html
+++ b/templates/gridlist2.html
@@ -25,7 +25,6 @@
     .cover{
     }
     .mycol{
-        margin-left: 50px;
         margin-bottom: 15px;
         background-color: #AF2C2A;
     }
@@ -81,6 +80,11 @@
                 </h1>
             </div>
         </div>
+        <div class="row ">
+                <h1 style="margin-left:15px;">
+                Gridwise
+                </h1>
+        </div>
         <div class="row">
             <form class="mymargin" method="POST">
                     <fieldset disabled>
@@ -102,6 +106,7 @@
                         </select>
                         </div>
                     </div>
+                <button type="submit" class="btn btn-danger mycol" value="submit">Submit</button>
                     <div class="row invisible shrink">
                         <div class="col-md">
                         <select class="form-select form-select-lg mb-3 selectt" aria-label=".form-select-lg example" name="answer1">
@@ -109,7 +114,6 @@
                         </select>
                         </div>
                     </div>     
-                <button type="submit" class="btn btn-danger mycol" value="submit">Submit</button>
             </form>
         </div>
     </div>
