--- a/templates/productlist.html
+++ b/templates/productlist.html
@@ -28,7 +28,6 @@
     .cover{
     }
     .mycol{
-        margin-left: 50px;
         margin-bottom: 15px;
         background-color: #AF2C2A;
     }
@@ -82,6 +81,11 @@
                 STOCK BALANCING
                 </h1>
             </div>
+        </div>
+        <div class="row ">
+                <h1 style="margin-left:15px;">
+                Productwise
+                </h1>
         </div>
         <div class="row">
             <form class="mymargin" method="POST">
