--- a/templates/gridlist2.html
+++ b/templates/gridlist2.html
@@ -99,7 +99,7 @@
                     <div class="row">
                         <div class="col-md">
                         <select class="form-select form-select-lg mb-3 selectt" aria-label=".form-select-lg example" name="answer2">
-                        <option selected>Select Depot/Distributor</option>
+                        <option selected>Select Brewery</option>
                         {% for i in opns %}
                             <option value="{{i}}">{{i}}</option>
                         {% endfor %}
